--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           </div>
         </div>
       </div>
-      <div class="clip"></div>
+      <div class="tugma"></div>
       <br>
       <div class="mentor container">
         <div class="odd">
           <div class="">01</div>
-          <div class="underline"></div>
+          <div class="red-line"></div>
           <div class="course">
             <div class="teacher">
               <h2>Get certificates <br>from us.</h2>
@@ -70,7 +70,7 @@
         </div>
         <div class="odd">
           <div class="">01</div>
-          <div class="underline"></div>
+          <div class="red-line"></div>
           <div class="course">
             <div class="teacher">
               <h2>Become a teacher <br>of our platform.</h2>
@@ -122,29 +122,29 @@
         </div>
       </div>
       <div class="today container">
-        <div class="ship">
+        <div class="tex">
           <p>membership</p>
         </div>
         <div class="boat">
           <h2>Start your learning <br>journey today!</h2>
         </div>
-        <div class="ship2">
+        <div class="tex2">
           <p>A best and cheapest way of getting know <br>learning to make a better tomorow</p>
         </div>
-        <div class="ship3">
+        <div class="tex3">
           <button>sign up</button>
         </div>
       </div>
     </div>
     <div class="popular_home1ic">
       <div class="categories container">
-        <div class="shipping2">
+        <div class="texping2">
           <p>browse categories</p>
         </div>
-        <div class="shipping3">
+        <div class="texping3">
           <h2>Popular home1ic to learn</h2>
         </div>
-        <div class="shipping4">
+        <div class="texping4">
           <p>A best and cheapest way of getting know</p>
           <p>learning to make a better tomorow</p>
         </div>
@@ -175,7 +175,7 @@
           <p>2 Course</p>
         </div>
       </div>
-      <div class="shiping1 container">
+      <div class="texing1 container">
         <button>browse all</button>
       </div>
     </div>
@@ -231,7 +231,7 @@
             <div>
               <p>Marketing Teacher</p>
             </div>
-            <div class="banan">
+            <div class="aabb">
               <p>Aaron Finch is one of the best digital <br>marketing course mentor of our <br>platform.
                 He is very generous.</p>
             </div>
@@ -247,7 +247,7 @@
             <div>
               <p>UI Design Teacher</p>
             </div>
-            <div class="banan">
+            <div class="aabb">
               <p>Steven Smith is one of the best Ul <br>design course mentor of our <br>platform. He is
                 very generous.</p>
             </div>
@@ -265,7 +265,7 @@
             <div>
               <p>Design Teacher</p>
             </div>
-            <div class="banan">
+            <div class="aabb">
               <p>David Warner is one of the best <br>disign course mentor of our own <br>platform. He is
                 very generous.</p>
             </div>
@@ -281,7 +281,7 @@
             <div>
               <p>Marketing Teacher</p>
             </div>
-            <div class="banan">
+            <div class="aabb">
               <p>Glenn Maxwell is one of the best <br>digital marketing course mentor of <br>our platform.
                 He is very generous.</p>
             </div>
