--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </main>
   </div>
   <div class="home2">
-    <div class="membership_journey container">
+    <div class="membership container">
       <div class="yesterday container">
         <div class="after_tomorrow">
           <div class="background back1">
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div>
-    <div class="popular_home1ic">
+    <div>
       <div class="categories container">
         <div class="texping2">
           <p>browse categories</p>
@@ -175,25 +175,24 @@
           <p>2 Course</p>
         </div>
       </div>
-      <div class="texing1 container">
-        <button>browse all</button>
-      </div>
     </div>
   </div>
   <div class="home3">
     <div class="review container">
       <div class="retell">
-        <div class="regularly1">
+        <div class="regular1">
           <p>membership</p>
         </div>
-        <div class="regularly2">
+        <div class="regular2">
           <h2>Our popular courses</h2>
         </div>
-        <div class="regularly3">
+        <div class="regular3">
           <p>A best and cheapest way of getting know <br>learning to make a better tomorow</p>
         </div>
       </div>
-      <div class="all_btn"><button>browse all</button></div>
+      <div class="browse-btn">
+        <button>browse all</button>
+      </div>
     </div>
     <div class="beginners container">
       <div class="beginner">
